# Rephrase-Tool

./: .gitignore  README.md  main.py  pyproject.toml
backend/: .env.example  .gitignore  main.py  pyproject.toml  test_gemini.py
backend/routes/: search.py  upload.py
backend/services/: ai_functions.py  openalex.py  parser.py
backend/services/ai/: claude.py  gemini.py  openai.py  provider.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
